--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-pandas==2.0.3
-numpy==1.24.4
-apache-airflow-providers-postgres==5.10.1
-apache-airflow-providers-common-sql==1.11.0
-psycopg2-binary==2.9.9
+psycopg2
+pandas
+numpy
+pytest
+pytest-mock
+pytest-docker-tools
+apache-airflow-providers-postgres
+apache-airflow-providers-common-sql
+psycopg2-binary
