--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,7 +46,7 @@ x-airflow-common: &airflow-common
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.2}
-#  build: .
+  build: .
   environment: &airflow-common-env
     AIRFLOW_VAR_DATA_DIR: /opt/airflow/data
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
