--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-psycopg2
 pandas
 numpy
-pytest
-pytest-mock
-pytest-docker-tools
-apache-airflow-providers-postgres
+requests
 apache-airflow-providers-common-sql
-psycopg2-binary
